Fix for some global button style bleed. This hardens a number of common styles to prevent themes, namely Elementor, from having global button styles bleed into our full styling.

--- a/src/resources/postcss/components/full/_ical-link.pcss
+++ b/src/resources/postcss/components/full/_ical-link.pcss
@@ -57,8 +57,17 @@
 			}
 		}
 
-		.tribe-events-c-subscribe-dropdown__button-text {
+		.tribe-events-c-subscribe-dropdown__button-text,
+		button.tribe-events-c-subscribe-dropdown__button-text {
+			background-image: none;
+			border-radius: 0;
+			border: none;
+			box-shadow: none;
+			color: currentColor;
 			cursor: pointer;
+			font-size: inherit;
+			padding: 0;
+			text-shadow: none;
 		}
 
 		.tribe-events-c-subscribe-dropdown__button-icon {
